--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <base href="/Deploy-GestionMuestras/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="Deploy-GestionMuestras/styles.ef46db3751d8e999.css"></head>
+<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
-<script src="Deploy-GestionMuestras/runtime.0ae6991d9e03d37d.js" type="module"></script><script src="Deploy-GestionMuestras/polyfills.829ef1dedcbb2e29.js" type="module"></script><script src="Deploy-GestionMuestras/main.3d53a357542e5811.js" type="module"></script></body>
+<script src="runtime.0ae6991d9e03d37d.js" type="module"></script><script src="polyfills.829ef1dedcbb2e29.js" type="module"></script><script src="main.3d53a357542e5811.js" type="module"></script></body>
 </html>
